# gamescape

./: README.md  pyproject.toml
gamescape/: __init__.py  cli.py  dynamics.py  render.py
tests/: test_cli.py  test_dynamics.py  test_render.py
