[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamescape"
version = "0.1.0"
description = "CLI tool for visualizing evolutionary game theory dynamics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
gamescape = "gamescape.cli:main"

[tool.setuptools.packages.find]
include = ["gamescape*"]

[tool.ruff]
line-length = 99
