[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamescape"
version = "0.1.0"
description = "CLI tool for visualizing evolutionary game theory dynamics — replicator equations, fixed points, and phase portraits in your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Raeli Savitt", email = "rsavitt@users.noreply.github.com"},
]
keywords = ["game-theory", "evolutionary", "replicator-dynamics", "visualization", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/rsavitt/gamescape"
Repository = "https://github.com/rsavitt/gamescape"
Issues = "https://github.com/rsavitt/gamescape/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
gamescape = "gamescape.cli:main"

[tool.setuptools.packages.find]
include = ["gamescape*"]

[tool.ruff]
line-length = 99
